feat: rook 이동 가능 경로 메서드 구현